--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: srudman <srudman@student.42lisboa.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/23 12:15:01 by srudman           #+#    #+#              #
-#    Updated: 2023/11/26 18:40:50 by srudman          ###   ########.fr        #
+#    Updated: 2024/01/21 21:03:50 by srudman          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ CFLAGS = -Wall -Wextra -Werror
 
 SRC = push_swap.c main.c error_handling.c linked_stacks_utils.c movements_push.c \
 	movements_reverse_rotate.c movements_rotate.c movements_swap.c math_operations.c \
-	stack_init.c
+	stack_init.c stack_a_analysis.c stack_b_analysis.c
 
 LIBFT = libft/libft.a
 
