--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,15 +6,15 @@
 #    By: srudman <srudman@student.42lisboa.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/23 12:15:01 by srudman           #+#    #+#              #
-#    Updated: 2024/01/21 21:03:50 by srudman          ###   ########.fr        #
+#    Updated: 2024/01/22 14:28:52 by srudman          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = push_swap.a
+NAME = push_swap
 
 CC = cc
 
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g
 
 SRC = push_swap.c main.c error_handling.c linked_stacks_utils.c movements_push.c \
 	movements_reverse_rotate.c movements_rotate.c movements_swap.c math_operations.c \
@@ -30,7 +30,7 @@ $(NAME): $(OBJ)
 	ar -crs $(NAME) $(OBJ)
 	@make -C libft
 	ar -crs $(NAME) $(LIBFT)
-	
+
 clean:
 	rm -f $(OBJ)
 	@make -C libft clean
