--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: srudman <srudman@student.42lisboa.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/23 12:15:01 by srudman           #+#    #+#              #
-#    Updated: 2024/01/28 19:52:10 by srudman          ###   ########.fr        #
+#    Updated: 2024/01/29 12:18:22 by srudman          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g
 SRC = push_swap.c main.c error_handling.c linked_stacks_utils.c movements_push.c \
 	movements_reverse_rotate.c movements_rotate.c movements_swap.c math_operations.c \
 	stack_init.c stack_a_analysis.c stack_b_analysis.c linked_stacks_utils_2.c \
-	movement_a_to_b.c
+	movements_between_stacks.c
 
 LIBFT = libft/libft.a
 
